<resources>
    <string name="app_name">My Application</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="Login">Login</string>
    <string name="login_name">login name</string>
    <string name="password">password</string>
    <string name="switch1">What does this do?</string>
    <string name="img">random img</string>
    <string name="checkbox">CheckBox</string>
    <string name="radiobutton">RadioButton</string>
    <string name="login_button">Login</string>
    <string name="dialog_message">Are you sure you want to exit?</string>
    <string name="ok">Yes</string>
    <string name="cancel">No</string>
    <string name="startchat">Start Chat</string>
    <string name="search"></string>
    <string name="send">Send</string>
    <string name="outgoingtxt">New Text</string>
    <string name="incomingtxt">New Text</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <string name="tootlbar_test">Toolbar Test</string>
    <string name="ic_earth">Earth</string>
    <string name="ic_wind">Wind</string>
    <string name="ic_fire">Fire</string>
    <string name="goBack">Do you want to go back?</string>
    <string name="weatherButton">Weather</string>
    <string name="currentTemp"></string>
    <string name="minTemp"></string>
    <string name="maxTemp"></string>


</resources>
