<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:rowCount="2"
    tools:context=".ListItemsActivity">

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="210dp"
        android:layout_height="match_parent"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:text="@string/radiobutton" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="201dp"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:text="@string/checkbox" />

    <Switch
        android:id="@+id/switch4"
        android:layout_width="208dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:text="@string/switch1" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="201dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:contentDescription="@string/img"
        android:gravity="fill"
        app:srcCompat="@android:drawable/ic_menu_camera" />
</GridLayout>